--- a/University/dr4-java-web/java-dr4-tp1/web/index.html
+++ b/University/dr4-java-web/java-dr4-tp1/web/index.html
@@ -12,7 +12,7 @@ Time: 15:46
     <title>TP 1 -Login HTML Page</title>
 </head>
 <body>
-    <form action="/java_dr4_tp1_war_exploded/login" method="post">
+    <form action="/login" method="post">
         <div class="container">
             <label name="luname"><b>User name: </b></label>
             <input type="text" placeholder="Enter user name" name="uname" required>
