DR4 - java Web - TP1: Transformar "login" em "cadastro"

--- a/University/dr4-java-web/java-dr4-tp1/web/index.html
+++ b/University/dr4-java-web/java-dr4-tp1/web/index.html
@@ -15,11 +15,11 @@ Time: 15:46
     <form action="/login" method="post">
         <div class="container">
             <label name="luname"><b>User name: </b></label>
-            <input type="text" placeholder="Enter user name" name="uname" required>
+            <input type="text" placeholder="Enter user name" name="user" required>
             <br>
 
             <label name="lpass"><b>Password: </b></label>
-            <input type="text" placeholder="Enter password" name="pass" required>
+            <input type="text" placeholder="Enter password" name="password" required>
             <br>
 
             <button type="submit">Login</button>
