--- a/University/dr4-java-web/java-dr4-tp1/web/index.html
+++ b/University/dr4-java-web/java-dr4-tp1/web/index.html
@@ -9,20 +9,25 @@ Time: 15:46
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+<!--    <link rel="stylesheet" type="text/css"href="sty2.css"/>-->
     <title>TP 1 -Login HTML Page</title>
 </head>
 <body>
     <form action="/login" method="post">
         <div class="container">
-            <label name="luname"><b>User name: </b></label>
-            <input type="text" placeholder="Enter user name" name="user" required>
+            <label name="luname"><b>Nome: </b></label>
+            <input type="text" placeholder="Enter user name" name="name" required>
             <br>
 
-            <label name="lpass"><b>Password: </b></label>
+            <label name="lemail"><b>E-mail: </b></label>
+            <input type="text" placeholder="Enter E-mail" name="email" required>
+            <br>
+
+            <label name="lpassword"><b>Senha: </b></label>
             <input type="text" placeholder="Enter password" name="password" required>
             <br>
 
-            <button type="submit">Login</button>
+            <button type="submit">Cadastro</button>
             <br>
         </div>
 
