--- a/University/dr4-java-web/dr4-project/exercicio4/web/login.html
+++ b/University/dr4-java-web/dr4-project/exercicio4/web/login.html
@@ -1,10 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<!--
+To change this license header, choose License Headers in Project Properties.
+To change this template file, choose Tools | Templates
+and open the template in the editor.
+-->
+<html>
 <head>
+    <title>TODO supply a title</title>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    login html
+<div>
+    <form method="POST" action="/Login/Login">
+        <table>
+            <tr>
+                <td>Matrícula: </td>
+                <td><input name="matricula" type="text"></td>
+            </tr>
+            <tr>
+                <td>Senha: </td>
+                <td><input name="senha" type="password"></td>
+            </tr>
+            <tr>
+                <td> <input type="submit" value="Enviar"> </td>
+                <td> <input type="reset" value="Limpar"> </td>
+            </tr>
+        </table>
+
 </body>
 </html>
