--- a/University/dr4-java-web/dr4-project/exercicio7/web/saudacao.html
+++ b/University/dr4-java-web/dr4-project/exercicio7/web/saudacao.html
@@ -5,10 +5,11 @@
     <title>Saudação Page</title>
 </head>
 <body>
-    <form method="POST" action="saudacao.jsp">
-        <select>
-            <option name="option" value="1">Sra</option>
-            <option name="option" value="2">Sr</option>
+    <form action="saudacao.jsp">
+        <select name="option">
+            <option>Sra</option>
+            <option>Srta</option>
+            <option>Sr</option>
         </select>
         <input name="nome" placeholder="Nome" type="text">
         <br>
